<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".basic.ScreenCaptureActivity">
    <FrameLayout
        android:id="@+id/publisher_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/full_screen_renderer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top" />
    </FrameLayout>



        <RadioGroup
            android:layout_margin="20dp"
            android:id="@+id/rbGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            >
            <RadioButton
                android:id="@+id/rbScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Screen"/>
            <RadioButton android:id="@+id/rbFront"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Front"/>
            <RadioButton android:id="@+id/rbRear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Rear"/>
        </RadioGroup>


    <LinearLayout
        android:id="@+id/screen_share_audio_source_container"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_below="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:text="Screen Share Audio Source:"
            android:textColor="#fff"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <RadioGroup
            android:layout_margin="20dp"
            android:id="@+id/screen_share_audio_source_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <RadioButton
                android:id="@+id/screen_share_audio_source_microphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Microphone"/>
            <RadioButton android:id="@+id/screen_share_audio_source_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="System Audio"/>

        </RadioGroup>
    </LinearLayout>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stream_id_edittext"
        android:padding="5dp"
        android:background="?android:attr/colorBackground"
        android:layout_above="@id/activity_screen_share_button_container"/>

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:id="@+id/activity_screen_share_button_container"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Stats"
            android:id="@+id/show_stats_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:id="@+id/start_streaming_button"
            android:onClick="startStreaming"

            android:layout_marginStart="5dp"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/broadcasting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"/>
</RelativeLayout>