...
                    android:text="Bytes Sent:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/stats_popup_bytes_sent_video_textview"
                    android:layout_marginLeft="2.5dp"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
...
    <Button
        android:layout_marginTop="5dp"
        android:text="Close"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/stats_popup_stats_container"

        android:id="@+id/stats_popup_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>


...
