<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".basic.PlayActivity">
    <FrameLayout
        android:id="@+id/publisher_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/full_screen_renderer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top" />

    </FrameLayout>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_action_chat"
        android:layout_alignParentLeft="true"
        android:layout_margin="3dp"
        android:onClick="showSendDataChannelMessageDialog"
        android:layout_centerVertical="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stream_id_edittext"
        android:padding="5dp"
        android:background="?android:attr/colorBackground"
        android:layout_above="@id/start_streaming_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/start_streaming_button"
        android:onClick="startStreaming"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        />

        <TextView
            android:id="@+id/broadcasting_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"/>
</RelativeLayout>